--- a/src/containers/TheNavigationBarComponent/TheNavigationBarComponent.html
+++ b/src/containers/TheNavigationBarComponent/TheNavigationBarComponent.html
@@ -2,7 +2,10 @@
   <md-list-item>
     <md-icon>move_to_inbox</md-icon>
     <span class="md-list-item-text" @click="toggleShowOnlyStared">Stared</span>
-    <md-badge class="md-primary md-square colored" md-content='Тут цифры'></md-badge>
+    <md-badge
+      class="md-primary md-square colored"
+      md-content="Тут цифры"
+    ></md-badge>
   </md-list-item>
   <md-list-item>
     <md-icon>send</md-icon>
